# MEEGqc

./: .gitignore  CITATION.cff  README.md  pyproject.toml  release.py
docs/: EEG_Support_in_MEGqc.md  MEGNET_SYNTHETIC_ECG_EOG_IMPLEMENTATION_PLAN.md  REBRANDING.md
docs/source/: settings_ini.rst
hpc/: BUILD_APPTAINER_IMAGE.md  CLI_REFERENCE.md  MEGQC.def
meg_qc/: create_dataset_plots.py  create_dataset_qc_plots.py  create_multi_dataset_plots.py  test.py
meg_qc/calculation/: initial_meg_qc.py  meg_qc_pipeline.py  objects.py
meg_qc/calculation/metrics/: ECG_EOG_meg_qc.py  PSD_meg_qc.py  STD_meg_qc.py  summary_report_GQI.py
meg_qc/miscellaneous/GUI/: _update_helper.py  megqcGUI.py  update_widgets.py  updater.py  worker_entry.py
meg_qc/miscellaneous/GUI/output_monitoring/: __init__.py  cli_terminal.py  live_terminal.py
meg_qc/miscellaneous/GUI/qc_viewer/: __init__.py  annotation_manager.py  content_panel.py  timeseries_widget.py  viewer_window.py
meg_qc/miscellaneous/easy_megnet/: __init__.py  easy_megnet.py
meg_qc/plotting/: meg_qc_dataset_plots.py  meg_qc_dataset_qc_plots.py  meg_qc_group_plots.py  meg_qc_group_qc_plots.py  meg_qc_multi_dataset_plots.py  meg_qc_multi_sample_group_plots.py  meg_qc_plots.py  topomap_2d.py  universal_html_report.py  universal_plots.py
meg_qc/settings/: settings.ini
packaging/meeg-qc/: README.md  pyproject.toml
tests/: test_gqi_group_table.py  test_meg_pipeline.py
